Separate cursor in two part to allow vertical scrolling with the cursor head fixed & being not affected by timeline's transition while horizontal scrolling

--- a/web/less/components/schedule-grid.less
+++ b/web/less/components/schedule-grid.less
@@ -9,7 +9,7 @@
   //overflow: hidden;
   white-space: nowrap;
   cursor: move;
-  z-index: 3;
+  z-index: 1;
 
   width: @viewport-width;
 
